# LambdaPi

./: LambdaPi.cabal  README.md  stack.yaml
src/: LambdaPi.hs  Main.hs  Stlc.hs
