name:                LambdaPi
version:             0.1.0.0
homepage:            https://github.com/halfaya/LambdaPi
license:             MIT
license-file:        LICENSE
author:              John Leo
maintainer:          leo@halfaya.org
copyright:           2017 John Leo
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LambdaPi
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable LambdaPi
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, LambdaPi
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/halfaya/LambdaPi
